force-app/main/default/objects/Lead__c/Lead__c.object-meta.xml
<CustomObject>
    <label>未会員リード</label>
    <nameField>
        <label>会社名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>