force-app/main/default/objects/Lead__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>