force-app/main/default/objects/Lead__c/fields/affiliated_company2__c.field-meta.xml
<CustomField>
    <fullName>affiliated_company2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連企業2</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipName>affiliated_company2</relationshipName>
    <type>Lookup</type>
</CustomField>