force-app/main/default/objects/Lead__c/fields/affiliated_company__c.field-meta.xml
<CustomField>
    <fullName>affiliated_company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連企業1</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipName>Custom_Lead_Key</relationshipName>
    <type>Lookup</type>
</CustomField>