force-app/main/default/objects/Lead__c/fields/agent_desired_car_model__c.field-meta.xml
<CustomField>
    <fullName>agent_desired_car_model__c</fullName>
    <label>希望車種（代行）</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>