force-app/main/default/objects/Lead__c/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <description>リードのオブジェクト権限があるプロファイルかつ退職者（無効ユーザー）でない
→重複確認のエラー回避のため</description>
    <formula>IF( AND(Owner:User.IsActive , OR(Owner:User.ProfileName__c =&quot;販売 Platform ユーザ&quot;,Owner:User.ProfileName__c =&quot;海外 Platform ユーザ&quot;,Owner:User.ProfileName__c =&quot;システム管理者&quot;,Owner:User.ProfileName__c =&quot;カスタム Platform ユーザ&quot;)),TRUE,FALSE)</formula>
    <label>権限付与</label>
    <type>Checkbox</type>
</CustomField>