force-app/main/default/objects/Lead__c/fields/classification__c.field-meta.xml
<CustomField>
    <fullName>classification__c</fullName>
    <label>区分</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>輸入業者</fullName>
            </value>
            <value>
                <fullName>APホルダー</fullName>
            </value>
            <value>
                <fullName>ディーラー</fullName>
            </value>
            <value>
                <fullName>一般顧客</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>