force-app/main/default/objects/Lead__c/fields/competition__c.field-meta.xml
<CustomField>
    <fullName>competition__c</fullName>
    <label>競合他社</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>