force-app/main/default/objects/Lead__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最終目的地</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>country_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>