force-app/main/default/objects/Lead__c/fields/country_not_entered__c.field-meta.xml
<CustomField>
    <fullName>country_not_entered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>最終目的地　未入力フラグ</label>
    <type>Checkbox</type>
</CustomField>