force-app/main/default/objects/Lead__c/fields/country_of_transit__c.field-meta.xml
<CustomField>
    <fullName>country_of_transit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>経由国</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>country_of_transit</relationshipName>
    <type>Lookup</type>
</CustomField>