force-app/main/default/objects/Lead__c/fields/DuplicateRecords__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRecords__c</fullName>
    <label>重複レコード</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>