force-app/main/default/objects/Lead__c/fields/DuplicateRules__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>重複ルール</label>
    <type>Checkbox</type>
</CustomField>