force-app/main/default/objects/Lead__c/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <label>メール（担当者2）</label>
    <type>Email</type>
</CustomField>