force-app/main/default/objects/Lead__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>業種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>輸出</fullName>
            </value>
            <value>
                <fullName>輸出（中古車のみ）</fullName>
            </value>
            <value>
                <fullName>おこし</fullName>
            </value>
            <value>
                <fullName>パーツ/解体</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>