force-app/main/default/objects/Lead__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>リードソース</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>広告経由</fullName>
            </value>
            <value>
                <fullName>飛び込み営業</fullName>
            </value>
            <value>
                <fullName>会員による紹介</fullName>
            </value>
            <value>
                <fullName>他社購入歴</fullName>
            </value>
            <value>
                <fullName>説明会</fullName>
            </value>
            <value>
                <fullName>ウェブサイト</fullName>
            </value>
            <value>
                <fullName>Google map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>