force-app/main/default/objects/Lead__c/fields/Member_Classification__c.field-meta.xml
<CustomField>
    <fullName>Member_Classification__c</fullName>
    <label>会員分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recon car 会員</fullName>
            </value>
            <value>
                <fullName>タイ代行</fullName>
            </value>
            <value>
                <fullName>CR課</fullName>
                <isActive>false</isActive>
                <label>CR課</label>
            </value>
            <value>
                <fullName>国内販売</fullName>
                <isActive>false</isActive>
                <label>国内販売</label>
            </value>
            <value>
                <fullName>海外販売</fullName>
                <isActive>false</isActive>
                <label>海外販売</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>