force-app/main/default/objects/Lead__c/fields/Member_Memo__c.field-meta.xml
<CustomField>
    <fullName>Member_Memo__c</fullName>
    <label>会員メモ</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>