force-app/main/default/objects/Lead__c/fields/MobilePhone2__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone2__c</fullName>
    <label>携帯電話（担当者2）</label>
    <type>Phone</type>
</CustomField>