force-app/main/default/objects/Lead__c/fields/Monthly_Purchase_Units__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Purchase_Units__c</fullName>
    <label>月間購入台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>