force-app/main/default/objects/Lead__c/fields/Next_contact_time__c.field-meta.xml
<CustomField>
    <fullName>Next_contact_time__c</fullName>
    <label>次回接触日時</label>
    <type>DateTime</type>
</CustomField>