force-app/main/default/objects/Lead__c/fields/PIC2__c.field-meta.xml
<CustomField>
    <fullName>PIC2__c</fullName>
    <label>担当者2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>