force-app/main/default/objects/Lead__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <label>担当者1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>