force-app/main/default/objects/Lead__c/fields/port__c.field-meta.xml
<CustomField>
    <fullName>port__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>港</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipName>Port_of_Country</relationshipName>
    <type>Lookup</type>
</CustomField>