force-app/main/default/objects/Lead__c/fields/Sansan_check__c.field-meta.xml
<CustomField>
    <fullName>Sansan_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sansanから自動作成</label>
    <type>Checkbox</type>
</CustomField>