force-app/main/default/objects/Lead__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>リード状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>リード作成</fullName>
                <default>true</default>
                <label>リード作成</label>
            </value>
            <value>
                <fullName>初回アポイント獲得</fullName>
            </value>
            <value>
                <fullName>課題ヒアリング</fullName>
            </value>
            <value>
                <fullName>課題解決の提案</fullName>
            </value>
            <value>
                <fullName>キーマン（部長以上）との商談</fullName>
            </value>
            <value>
                <fullName>キーマンからサービス利用意向の獲得</fullName>
            </value>
            <value>
                <fullName>依頼獲得</fullName>
            </value>
            <value>
                <fullName>オークション入会済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>