force-app/main/default/objects/Lead__c/fields/Title2__c.field-meta.xml
<CustomField>
    <fullName>Title2__c</fullName>
    <label>役職（担当者2）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>