force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member_Classification__c</columns>
    <columns>Rating__c</columns>
    <columns>Status__c</columns>
    <columns>PIC__c</columns>
    <columns>country__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>